Ensure visualizer is always copied to output dir

--- a/api/src/Box9.Leds.Pi.Api.WebHost/Box9.Leds.Pi.Api.WebHost.csproj
+++ b/api/src/Box9.Leds.Pi.Api.WebHost/Box9.Leds.Pi.Api.WebHost.csproj
@@ -178,8 +178,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Visualizer\css\visualizer.css" />
-    <Content Include="Visualizer\Index.html" />
+    <Content Include="Visualizer\css\visualizer.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Visualizer\Index.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
