--- a/api/src/Box9.Leds.Manager.PiApiClient/packages.config
+++ b/api/src/Box9.Leds.Manager.PiApiClient/packages.config
@@ -4,11 +4,16 @@
   <package id="Autofac.Owin" version="4.0.0" targetFramework="net461" />
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net461" />
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net461" />
-  <package id="Box9.Leds.Pi.Api" version="1.0.6293.31276" targetFramework="net461" />
+  <package id="Box9.Leds.Pi.Api" version="1.0.6294.31412" targetFramework="net461" />
   <package id="Dapper" version="1.50.2" targetFramework="net461" />
   <package id="Dapper.Contrib" version="1.50.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="jQuery" version="1.6.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net461" />
@@ -20,6 +25,7 @@
   <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.FileSystems" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net461" />
