--- a/api/src/Box9.Leds.Manager.Core/Box9.Leds.Manager.Core.csproj
+++ b/api/src/Box9.Leds.Manager.Core/Box9.Leds.Manager.Core.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Jobs\JobStatus.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\Logger.cs" />
+    <Compile Include="Tasks\TaskExtensions.cs" />
     <Compile Include="Validation\Guard.cs" />
     <Compile Include="Validation\GuardDoubleExtensions.cs" />
     <Compile Include="Validation\GuardIntExtensions.cs" />
