Playback through API

--- a/api/src/Box9.Leds.Manager.PiApiClient/Box9.Leds.Manager.PiApiClient.csproj
+++ b/api/src/Box9.Leds.Manager.PiApiClient/Box9.Leds.Manager.PiApiClient.csproj
@@ -216,6 +216,7 @@
     <Compile Include="PiApiClient.cs" />
     <Compile Include="PiApiClientCommunicationException.cs" />
     <Compile Include="PiApiClientFactory.cs" />
+    <Compile Include="PiApiClientRequestException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Response\SerializableGlobalJsonResult.cs" />
   </ItemGroup>
