Send video frames in 1000 frame chunks to Pi

--- a/api/src/Box9.Leds.Manager.Services/Box9.Leds.Manager.Services.csproj
+++ b/api/src/Box9.Leds.Manager.Services/Box9.Leds.Manager.Services.csproj
@@ -289,6 +289,8 @@
     <Compile Include="VideoProcessing\IVideoFileReader.cs" />
     <Compile Include="VideoProcessing\IVideoProcessor.cs" />
     <Compile Include="VideoProcessing\VideoFileReaderWrapper.cs" />
+    <Compile Include="VideoProcessing\VideoMetadata.cs" />
+    <Compile Include="VideoProcessing\VideoReadResult.cs" />
     <Compile Include="VideoProcessing\VideoProcessor.cs" />
     <Compile Include="VideoUpload\IVideoUploader.cs" />
     <Compile Include="VideoUpload\VideoUploader.cs" />
